--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,11 +20,11 @@
                     </ul>
                 </li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
+            <form class="navbar-form navbar-left" role="search" action="/searchPeople">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="请在此处输入用户昵称">
+                    <input name='target_people' type="text" class="form-control" placeholder="请在此处输入用户昵称">
                 </div>
-                <button type="submit" class="btn btn-default">搜索</button>
+                <button id="search_button" type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right"> 
                 <li><a href="{% url 'UserInfoPage' %}"><span class="glyphicon glyphicon-user"></span> 您好！{{request.session.username}}</a></li> 
