--- a/templates/weibohead.html
+++ b/templates/weibohead.html
@@ -15,7 +15,7 @@
                                 <strong>@{{tw.username}}：</strong>{{tw.content}} //
                                 {% endfor %}
                                 <br>
-                                <p style="font-size: 1.2em"><span style="color: blue">#{{weibo.topic}}#</span>{{weibo.content}}</p>
+                                <p style="font-size: 1.2em"><span style="color: blue">{{weibo.topic}}</span>{{weibo.content}}</p>
                                 <div>
                                     <p class="text-left">{{weibo.creatTime}}</p>
                                     <div class="text-right">
