add background pictures into webpages & add support for head pictures for different sexes

--- a/static/css/myCss.css
+++ b/static/css/myCss.css
@@ -1,5 +1,5 @@
 body{
-    background:url(templates/img/back.jpg);
+    background:url(templates/img/alicization_war_of_underworld-006.jpg);
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
