--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header navbar-left">
-            <a class="navbar-brand" href="#"><strong>MyWeibo</strong></a>
+            <a class="navbar-brand" href="#"><strong>gStore-Weibo</strong></a>
         </div>
         <div>
             <ul class="nav navbar-nav navbar-left">
