--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-color:lightgray">
+<body style="background-image:url({% static 'img/bingguo.jpg' %});background-repeat:no-repeat;background-attachment: fixed;background-size:auto;">
 {% include "nav.html" %}
 {% include "message.html" %}
-<div class="container d-flex flex-column mb-3" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto;background-color: lightgray">
+<div class="container d-flex flex-column mb-3" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto;">
     {% include "send.html" %}
 
     <div class="p-2" style="width: 100%">
