--- a/templates/weibolist.html
+++ b/templates/weibolist.html
@@ -1,10 +1,17 @@
 {% load static %}
 {% for w in weiboList  %}
-    <div id="w{{w.weiboId}}">
+    <div id="w{{w.weiboId}}" >
         <div class="row">
-            <div class="col-md-3 col-lg-4">
-                <img src="{% static 'img/headpic.jpg' %}" style="height: 180px;width: 180px;float: none;display: block;margin-left: auto;margin-right: auto;" class="img-circle">
-            </div>
+            {% if w.author.gender == 'm' %}
+                <div class="col-md-3 col-lg-4">
+                    <img src="{% static 'img/boyhead.jpeg' %}" style="height: 180px;width: 180px;float: none;display: block;margin-left: auto;margin-right: auto;" class="img-circle">
+                </div>
+            {% else %}
+                <div class="col-md-3 col-lg-4">
+                    <img src="{% static 'img/girlhead.jpeg' %}" style="height: 180px;width: 180px;float: none;display: block;margin-left: auto;margin-right: auto;" class="img-circle">
+                </div>
+            {% endif %}
+
             <div class="col-md-9 col-lg-8">
                 <a href="/otherspace/?userid={{w.author.userid}}" style="text-decoration:none;color:black"><h4><strong>{{w.author.username}}</strong></h4></a>
                 <div><a style="color:lightgray" href="/transfer/?weiboid={{w.weiboId}}">查看详情才能看评论内容哟！</a></div>
