--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -12,7 +12,6 @@
 {% include "nav.html" %}
 {% include "message.html" %}
 <div class="container d-flex flex-column mb-3" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto;">
-    {% include "send.html" %}
 
     <div class="p-2" style="width: 100%">
         <div class="container">
@@ -30,9 +29,9 @@
             <div class="panel panel-default m-auto" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto;">
                 <div class="panel-body" >
                     <ul id="myTab" class="nav nav-tabs">
-                        <li class="active"><a href="#friend" data-toggle="tab">可能认识</a></li>
+                        <li class="active"><a href="#friend" data-toggle="tab">【{{request.session.username}}】酱可能认识的人</a></li>
                         <li><a href="#fan" data-toggle="tab">推荐关注</a></li>
-                        <li><a href="#weibolist" data-toggle="tab">推荐微博</a></li>
+                        <li><a href="#weibolist" data-toggle="tab">热乎微博</a></li>
                     </ul>
                      <div id="myTabContent" class="tab-content" >
                         <div class="tab-pane fade in active" id="friend">
