change UI in transfer.html page

--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -8,10 +8,11 @@
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-color:lightgray">
+<body  style="background-image:url({% static 'img/55-1Z121103912614.jpg' %});
+        background-repeat:no-repeat;background-size:auto;overflow: hidden">
 {% include "nav.html" %}
 {% include "message.html" %}
-<div class="container d-flex flex-column mb-3" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto;background-color: lightgray">
+<div class="container d-flex flex-column mb-3" style=" width:100%;float: none;display: block;margin-left: auto;margin-right: auto">
     
     {% include 'weibohead.html' %}
 
