fix bugs in Message Alerting. Fix bugs in userInfo.html

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="background-image:url({% static 'img/alicization_war_of_underworld-006.jpg' %});background-size: auto;overflow: hidden">
+{% include "message.html" %}
 <div class="container">
     <div class="row" style="min-height: 50px">
 
