--- a/templates/regis.html
+++ b/templates/regis.html
@@ -11,7 +11,7 @@
 </head>
 <body  style="background-image:url({% static 'img/863145.png' %});
         background-repeat:no-repeat;background-size:auto;overflow: hidden">
-
+    {% include "message.html" %}
   <div class="row" style="min-height: 50px">
     </div>
     <div class="row" style="min-height: 50px">
